<resources>
    <string name="app_name">unLock</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">MAIN MENU</string>
    <string name="about_fragment_label">ABOUT</string>
    <string name="puzzle1ToolbarTittle">PUZZLE 1</string>
    <string name="puzzle2ToolbarTittle">PUZZLE 2</string>
    <string name="puzzle3ToolbarTittle">PUZZLE 3</string>
    <string name="about">ABOUT</string>
    <string name="play">PLAY</string>
    <string name="exit">EXIT</string>
    <string name="next_game">Next</string>
    <string name="previous_game">Previous</string>
    <string name="home">Home</string>
    <string name="textTitle">POPUP</string>
    <string name="puzzlesuccess2">You solved the puzzle by unLock-ing the red block!</string>
    <string name="puzzlesuccess1">Success!</string>

    <string name="moves">Moves:</string>
    <string name="current_moves">0</string>
    <string name="record">Record:</string>
    <string name="current_record">--</string>
    <string name="move_15">/15</string>
    <string name="move_17">/17</string>
    <string name="reset">reset</string>
    <string name="undo">undo</string>

    <string name="record1_value_key">record1</string>
    <string name="record2_value_key">record2</string>
    <string name="record3_value_key">record3</string>

    <string name="hello_menu_fragment">Welcome to unLock</string>
    <string name="howto_menu_fragment">Touch and slide the blue blocks to free the red one.</string>
    <string name="hello_about_fragment">Maxim\t\t\t\tPecherskiy\nAndrew\t\t\tAbdo\nBrando\t\t\tTovar\nEstefan\t\t\tVega</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>