<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Play1Fragment">

    <view
        android:id="@+id/view2"
        class="com.example.unlock.BoardFragment$Drawer"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_weight="1"
        android:background="#00f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movesUI" />

    <Button
        android:id="@+id/button_game1to2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/next_game"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_play1home"
        app:layout_constraintTop_toTopOf="@+id/button_play1home" />

    <Button
        android:id="@+id/button_play1home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/blue"
        android:text="@string/home"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_mock_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Mock Play"
        app:layout_constraintStart_toEndOf="@+id/button_mock_set_record"
        app:layout_constraintTop_toTopOf="@+id/button_mock_set_record" />

    <Button
        android:id="@+id/button_mock_set_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Mock Set Record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movesUI" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movesUI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play1home">

        <TextView
            android:id="@+id/movesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/moves"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentMoves1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/current_moves"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/movesLabel"
            app:layout_constraintTop_toTopOf="@+id/movesLabel" />

        <TextView
            android:id="@+id/reccordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/record"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/movesLabel"
            app:layout_constraintTop_toBottomOf="@+id/movesLabel" />

        <TextView
            android:id="@+id/currentReccord1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/current_record"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/reccordLabel"
            app:layout_constraintTop_toTopOf="@+id/reccordLabel" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/move_15"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/currentReccord1"
            app:layout_constraintTop_toTopOf="@+id/reccordLabel" />

        <Button
            android:id="@+id/button_undo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#003F51B5"
            android:text="@string/undo"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_reset1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/reset"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_undo1"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>