<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel" type="com.example.unlock.MainViewModel"/>
        <variable name="movesZ" type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayFragment">

        <com.example.unlock.Drawer
            android:id="@+id/drawer2"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:background="@drawable/boardbackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movesUI" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/drawer2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/drawer2"
            app:srcCompat="@drawable/boardbackground" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/next_game"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_home"
            app:layout_constraintTop_toTopOf="@+id/button_home" />

        <Button
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/previous_game"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/button_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_home" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:text="@string/home"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarPlay" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movesUI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_home">

            <TextView
                android:id="@+id/movesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/moves"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/currentMoves1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{String.valueOf(viewmodel.moves)}"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/movesLabel"
                app:layout_constraintTop_toTopOf="@+id/movesLabel" />

            <TextView
                android:id="@+id/reccordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/record"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/movesLabel"
                app:layout_constraintTop_toBottomOf="@+id/movesLabel" />

            <TextView
                android:id="@+id/currentRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/reccordLabel"
                app:layout_constraintTop_toTopOf="@+id/reccordLabel" />

            <TextView
                android:id="@+id/reccordMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/move_15"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/currentRecord"
                app:layout_constraintTop_toTopOf="@+id/reccordLabel" />

            <Button
                android:id="@+id/button_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@{viewmodel.fresh ? @color/grey : @color/blue}"
                android:clickable="@{!viewmodel.fresh}"
                android:text="@string/undo"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@{viewmodel.fresh ? @color/grey : @color/blue}"
                android:clickable="@{!viewmodel.fresh}"
                android:text="@string/reset"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_undo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolbarPlayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puzzle1ToolbarTittle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbarPlay"
            app:layout_constraintEnd_toEndOf="@+id/toolbarPlay"
            app:layout_constraintStart_toStartOf="@+id/toolbarPlay"
            app:layout_constraintTop_toTopOf="@+id/toolbarPlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>